--- a/app/assets/stylesheets/common/components/topic-query-filter.scss
+++ b/app/assets/stylesheets/common/components/topic-query-filter.scss
@@ -19,6 +19,19 @@
     flex: 1 1;
   }
 
+  .form-kit {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    @media screen and (min-width: 1280px) {
+      flex-direction: column;
+    }
+  }
+
+  &__title {
+    width: 100%;
+  }
+
   &__icon {
     position: absolute;
     left: 0.5em;
@@ -42,6 +55,66 @@
       outline: none;
       outline-offset: 0;
       box-shadow: inset 0 0 0 1px var(--tertiary);
+    }
+  }
+
+  &__submit {
+    margin-top: auto;
+  }
+
+  &__submit .form-kit__button {
+    height: 2em;
+  }
+
+  &__submit .btn-icon {
+    height: 2em;
+    width: 2em;
+  }
+
+  .form-kit__control-custom .select-kit-header,
+  .form-kit__control-custom .date-picker {
+    padding-inline: 0.65em !important;
+    height: 2em;
+    max-width: unset;
+  }
+}
+
+.navigation-filter {
+  @media screen and (min-width: 1280px) {
+    #main-outlet {
+      display: grid;
+      grid-template-columns: calc(200px + 2em) 1fr;
+      grid-column-gap: 1em;
+      grid-template-areas: "filter content";
+      position: relative;
+    }
+
+    .list-controls {
+      grid-area: filter;
+      position: fixed;
+      z-index: 999;
+    }
+
+    .list-controls .container {
+      width: min-content;
+    }
+
+    .list-container {
+      grid-area: content;
+    }
+
+    .topic-query-filter {
+      flex-direction: column;
+      padding: 1em;
+      background-color: var(--primary-very-low);
+      border: 1px solid var(--primary-low);
+    }
+
+    .topic-query-filter__submit {
+      display: flex;
+      flex-direction: row;
+      width: 100%;
+      justify-content: space-between;
     }
   }
 }
