UX: More styling & placement

--- a/app/assets/stylesheets/common/components/topic-query-filter.scss
+++ b/app/assets/stylesheets/common/components/topic-query-filter.scss
@@ -1,9 +1,12 @@
 .topic-query-filter {
   display: flex;
-  flex-direction: row;
   margin-right: auto;
   margin-bottom: var(--nav-space);
   width: 100%;
+  flex-direction: column;
+  padding: 1em;
+  background-color: var(--primary-very-low);
+  border: 1px solid var(--primary-low);
 
   &__label {
     background-color: var(--primary-low);
@@ -19,17 +22,17 @@
     flex: 1 1;
   }
 
-  .form-kit {
+  &__header {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    @media screen and (min-width: 1280px) {
-      flex-direction: column;
-    }
+    gap: 1em;
+    justify-content: center;
+    align-items: center;
   }
 
-  &__title {
+  &__filter-term {
     width: 100%;
+    margin-bottom: 0 !important;
   }
 
   &__icon {
@@ -43,32 +46,28 @@
     margin-right: 0.5em;
   }
 
-  input.topic-query-filter__filter-term {
-    margin: 0 0.5em 0 0;
-    border-color: var(--primary-low-mid);
-    padding-left: 1.75em;
-    color: var(--primary);
-    width: 100%;
-
-    &:focus {
-      border-color: var(--tertiary);
-      outline: none;
-      outline-offset: 0;
-      box-shadow: inset 0 0 0 1px var(--tertiary);
-    }
-  }
-
   &__submit {
     margin-top: auto;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
   }
 
   &__submit .form-kit__button {
     height: 2em;
+    margin-right: 0.5em;
   }
 
   &__submit .btn-icon {
     height: 2em;
     width: 2em;
+  }
+
+  .form-kit {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 1em;
   }
 
   .form-kit__control-custom .select-kit-header,
@@ -77,44 +76,8 @@
     height: 2em;
     max-width: unset;
   }
-}
 
-.navigation-filter {
-  @media screen and (min-width: 1280px) {
-    #main-outlet {
-      display: grid;
-      grid-template-columns: calc(200px + 2em) 1fr;
-      grid-column-gap: 1em;
-      grid-template-areas: "filter content";
-      position: relative;
-    }
-
-    .list-controls {
-      grid-area: filter;
-      position: fixed;
-      z-index: 999;
-    }
-
-    .list-controls .container {
-      width: min-content;
-    }
-
-    .list-container {
-      grid-area: content;
-    }
-
-    .topic-query-filter {
-      flex-direction: column;
-      padding: 1em;
-      background-color: var(--primary-very-low);
-      border: 1px solid var(--primary-low);
-    }
-
-    .topic-query-filter__submit {
-      display: flex;
-      flex-direction: row;
-      width: 100%;
-      justify-content: space-between;
-    }
+  .form-kit__container-optional {
+    display: none;
   }
 }
